@@ -1,73 +1,107 @@
 # Java EE 6 Advanced Training - Service Tier
 
+Both JSF Backing Beans and REST Endpoints use the `EntityManager`. In this module, you will add a extra service layer and make sure JSF and REST use it.
+
 ## Generate the service tier with JBoss Forge
 
 * Launch JBoss Forge (enter the `$FORGE_HOME/bin/forge` command)
 * Go to the `cdbookstore` directory
-* Execute the `generate.fsh` script with the command `run ../before/05-Service/generate.fsh` 
+* Execute the `generate.fsh` script with the command `run ../before/06-Service/generate.fsh` 
 
-## Add producers to the Resources class
+## Execute the tests in a remote environment to check the new tests are running
 
-* The class `org.agoncal.training.javaee6adv.util.Resources` should produce an `EntityManager` and a `Logger` 
-* Produce the `EntityManager` for `cdbookstorePU`
-* Produce a `java.util.logging.Logger` with an `InjectionPoint`
+* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
+
+# DOJO - Produce the Entity Manager
+
+## Add a CDI producer to the Resources class
+
+* The class `org.agoncal.training.javaee6adv.util.Resources` should produce an `EntityManager` for `cdbookstorePU`
+
+# DOJO - Write the service layer
 
 ## Write the services
 
 * Copy the files `AbstractService.java`, `MusicianService.java` and `PublisherService.java` to `cdbookstore/src/test/java/org/agoncal/training/javaee6adv/service`
-* `cp ../before/04-Service/AbstractService.java src/main/java/org/agoncal/training/javaee6adv/service`
-* `cp ../before/04-Service/MusicianService.java src/main/java/org/agoncal/training/javaee6adv/service`
-* `cp ../before/04-Service/PublisherService.java src/main/java/org/agoncal/training/javaee6adv/service`
+* `cp ../before/06-Service/AbstractService.java src/main/java/org/agoncal/training/javaee6adv/service`
+* `cp ../before/06-Service/MusicianService.java src/main/java/org/agoncal/training/javaee6adv/service`
+* `cp ../before/06-Service/PublisherService.java src/main/java/org/agoncal/training/javaee6adv/service`
 * Code the other services following the same logic until all the tests pass
 * Services should extend `AbstractService` (which uses the produced `EntityManager`) 
-* Each service overides the `getSearchPredicates` method
+* Services constructor should call super passing the type (eg. `public AuthorService() { super(Author.class); }`) 
+* Each service overides the `getSearchPredicates` method that has the signature `protected Predicate[] getSearchPredicates(Root<Author> root, Author example)`. Copy the content from the JSF Backing bean
 
-## Refactor the JSF backing beans and REST endpoints
-
-### REST endpoints
-
-* In REST enpoints get rid of `EntityManager` and instead inject the appropriate service
-* REST enpoints don't need to be transactional now
-
-### JSF backing beans
-
-* In JSF backing beans get rid of `EntityManager` and instead inject the appropriate service
-* Each call to the `entityManager` variable has to be replaced by a call to the service (eg. `entityManager.find` replaced by `service.findById`)
-* Why can we get rid of the `entityManager.flush` call ?
-* Methods `getSearchPredicates` are move to the services
-* To `paginate` user `service.count` and `service.page`
-* Remove `SessionContext` (why do we have `sessionContext.getBusinessObject(AuthorBean.class)`)
-* Remove `ejbProxy` and replace `ejbProxy.findById` by `service.findById`  
-* Backing beans don't need to be transactional now
+# DOJO - Write the service tests
 
 ## Write the service tests
 
-* Copy the files `MusicianService.java` and `PublisherServiceTest.java` to the `service` package
-* `cp ../before/04-Service/MusicianService.java cdbookstore/src/test/java/org/agoncal/training/javaee6adv/service`
-* `cp ../before/04-Service/PublisherServiceTest.java cdbookstore/src/test/java/org/agoncal/training/javaee6adv/service`
+* Copy the files `MusicianServiceTest.java`, `OrderLineServiceTest.java` and `PublisherServiceTest.java` to the `service` test package
+* `cp ../before/06-Service/MusicianServiceTest.java src/test/java/org/agoncal/training/javaee6adv/service`
+* `cp ../before/06-Service/OrderLineServiceTest.java src/test/java/org/agoncal/training/javaee6adv/service`
+* `cp ../before/06-Service/PublisherServiceTest.java src/test/java/org/agoncal/training/javaee6adv/service`
 * Code the other tests following the same logic until all the tests pass
+* Packaging should add `.addClass(Resources.class)` and `.addClass(AbstractService.class)`
+* Each test case should implement a `should_crud` method
+* Due to transactional persistence context :
+* Add a `public Book findByIdWithRelations(Long id)` in the book service that returns a book with its relations
+* Add a `public CD findByIdWithRelations(Long id)` in the CD service that returns a book with its relations
+* Add a `public List<Book> listAllWithRelations(Integer startPosition, Integer maxResult)` in the book service that returns a list of books with its relations
+* Add a `public List<CD> listAllWithRelations(Integer startPosition, Integer maxResult)`in the CD service that returns a list of books with its relations
+
+## Execute the tests in a remote environment
+
+* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
+
+# DOJO - Refactor the JSF backing beans and tests
+
+## Refactor the JSF backing beans
+
+* In JSF backing beans get rid of `EntityManager` and instead inject the appropriate service (eg. `@Inject private AuthorService service;`)
+* Each call to the `entityManager` variable has to be replaced by a call to the service (eg. `entityManager.find` replaced by `service.findById`). So you can replace all `this.entityManager` with `this.service`
+* `CDBean` and `BookBean` `findById` method should `return this.service.findByIdWithRelations(id)` to get all the relations
+* Why can we get rid of the `entityManager.flush` call ?
+* Methods `getSearchPredicates` can be removed as they have been moved to the services
+* To `paginate` methods use `this.service.count(example)` and `this.service.page(example, page, getPageSize())`
+* Methods `getAll` should just `return this.service.listAll()`
+* Remove `SessionContext` (why do we have `sessionContext.getBusinessObject(AuthorBean.class)`)
+* Remove `ejbProxy` and replace `ejbProxy.findById` by `service.findById`  
+* Backing beans don't need to be transactional now (get rid of `@Stateful`)
+
+## Refactor the JSF backing bean tests
+
+* JSF backing beans test need now to add service dependencies in the packaging (eg. `Resources`, `AbstractService`, `AuthorService`)
+
+## Execute the tests in a remote environment
+
+* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
+
+# DOJO - Refactor the REST endpoints and tests
+
+## Refactor the REST endpoints
+
+* In REST enpoints get rid of `EntityManager` and instead inject the appropriate service (eg. `@Inject private AuthorService service;`)
+* Backing beans don't need to be transactional now (get rid of `@Stateless`)
+* Each call to the `em` variable has to be replaced by a call to the service (eg. `em.find` replaced by `service.findById`). So you can replace all `em.` with `service.`
+* `listAll` methods should `return service.listAll(startPosition, maxResult)`  
+* `CDEndpoint` and `BookEndpoint` `findById` method should use `Book entity = service.findByIdWithRelations(id)` to get all the relations
+* `CDEndpoint` and `BookEndpoint` `listAll` method should `return service.listAllWithRelations(startPosition, maxResult);`
+service.findByIdWithRelations(id)
 
 ## Refactor the existing tests
 
-* JSF backing beans test need now to add service dependencies in the packaging (eg. `Resources`, `AbstractService`, `AuthorService`)
 * REST endpoint tests need now to add service dependencies in the packaging (eg. `Resources`, `AbstractService`, `AuthorService`)
 
 ## Execute the tests in a remote environment
 
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
-* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
 * `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
-* If you have the following error, it's because you are not using the Arquillian Maven profile `DeploymentScenario contains a target (_DEFAULT_) not matching any defined Container in the registry`
-* `NoClassDefFoundError` means that your ShrinkWrap packaging misses some classes (check the `createDeployment` method) 
-* `ConstraintViolationException` is thrown when the entity is not valid
-
-## Debug the tests if needed
-
-* Make sure WildFly has the debug settings `JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n"`
 
 ## Build the application
 
-* In Forge enter the command `build` 
+* Use Maven and build the application with `mvn clean install`
 
 ## Deploy the application on WildFly application server
 
@@ -87,4 +121,4 @@
 
 ## Backup your code
 
-* Save a backup of your code at `../after/05-Service/`
+* Save a backup of your code at `../after/06-Service/`
